# NetDiskSystem

NetDiskClient/: CMakeLists.txt  cloudadddialog.cpp  cloudadddialog.h  cloudadddialog.ui  config.h  createdirdialog.cpp  createdirdialog.h  createdirdialog.ui  downloadmanager.cpp  downloadmanager.h  downloadtask.cpp  downloadtask.h  fileinfo.cpp  fileinfo.h  filetrans.cpp  filetrans.h  generatesharelinkdlg.cpp  generatesharelinkdlg.h  generatesharelinkdlg.ui  listwidget.cpp  listwidget.h  listwidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytreeview.cpp  mytreeview.h  packetqueue.cpp  packetqueue.h  player.cpp  player.h  player.ui  progressbardelegate.cpp  progressbardelegate.h  resource.qrc  threadtask.cpp  (+8 more)
NetDiskClient/ffmpeg/include/libavutil/: ffversion.h
NetDiskServer/: CMakeLists.txt
NetDiskServer/include/: FileOperate.h  NetDiskServer.h
NetDiskServer/src/: FileOperate.cpp  NetDiskServer.cpp  client.txt  main.cpp
